Task 05a: Finalized the endpoints associated with the book favorite relation. Updated README to reflect most up-to-date endpoints.